tests/baselines/reference/parserForOfStatement2.errors.txt
//// [tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement2.ts] ////

parserForOfStatement2.ts(1,9): error TS1123: Variable declaration list cannot be empty.


==== parserForOfStatement2.ts (1 errors) ====
    for (var of X) {
            
!!! error TS1123: Variable declaration list cannot be empty.
    }